tests/baselines/reference/downlevelLetConst11.errors.txt
downlevelLetConst11.ts(2,1): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
downlevelLetConst11.ts(2,1): error TS2304: Cannot find name 'let'.


==== downlevelLetConst11.ts (2 errors) ====
    "use strict";
    let
    ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
    ~~~
!!! error TS2304: Cannot find name 'let'.